@startuml
skinparam classAttributeIconSize 0
class Category {
  - id
  - name
  - description
  - color
  - is_active
  - created_at
  + __init__()
  + from_dict()
  + to_dict()
  + get_habits()
  + __repr__()
}
class ErrorManager {
  - db_path
  - error_messages
  + __init__()
  + _load_errors()
  + display_error()
}
class Goal {
  - id
  - habit_id
  - target_period_days
  - target_completions
  - start_date
  - end_date
  - is_active
  - created_at
  + __init__()
  + from_dict()
  + to_dict()
  + calculate_progress()
  + _calculate_expected_completions()
  + is_expired()
  + __repr__()
}
class Habit {
  - id
  - name
  - frequency
  - notes
  - reminder_time
  - evening_reminder_time
  - streak
  - created_at
  - last_completed
  - is_active
  - reactivated_at
  - category_id
  + __init__()
  + edit_habit()
  + delete_habit()
  + mark_completed()
  + calculate_longest_streak()
  + to_dict()
  + from_dict()
}
Habit "1" -- "*" Completion : has
Habit "1" -- "*" Goal : has
Category "1" -- "*" Habit : contains
Goal --> Habit : targets
Completion --> Habit : belongs to
@enduml